--- a/程序/Objects/BoomClock.build_log.htm
+++ b/程序/Objects/BoomClock.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Wild Wolf, N/A, LIC=EXTQ1-CY8IG-L0PNE-5BLIZ-IQF65-ZS0TT
+License Information: Wild wolf, N/A, LIC=PEGU5-GGZBA-SLACN-YAGA6-6GJ9A-QF7D5
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
-Toolchain Path:  C:\Program Files (x86)\Keil_v5\C51\BIN
+Toolchain Path:  C:\Program Files\Keil_v5\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
 Linker/Locator:  BL51.exe V6.22.4.0
@@ -17,7 +17,7 @@ Library Manager: LIB51.exe V4.30.1.0
 Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0
-Target DLL:      PZ51Tracker.dll V???
+    Target DLL: PZ51Tracker.dll
 Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
