Signed-off-by: wolfa <wolfa@qq.com>

--- a/程序/Objects/BoomClock.build_log.htm
+++ b/程序/Objects/BoomClock.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Wild wolf, N/A, LIC=PEGU5-GGZBA-SLACN-YAGA6-6GJ9A-QF7D5
+License Information: Wild Wolf, N\A, LIC=YAC6R-K2TR4-RK5BI-TI8LD-16VJT-VEQ3R
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
-Toolchain Path:  C:\Program Files\Keil_v5\C51\BIN
+Toolchain Path:  C:\Program Files (x86)\Keil_v5\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
 Linker/Locator:  BL51.exe V6.22.4.0
@@ -22,7 +22,7 @@ Dialog DLL:      TP51.DLL V2.60.1.0
  
 <h2>Project:</h2>
 C:\Users\wolfa\Desktop\BoomClock\³ÌÐò\BoomClock.uvproj
-Project File Date:  10/09/2024
+Project File Date:  12/16/2024
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
@@ -30,10 +30,10 @@ assembling STARTUP.A51...
 compiling main.c...
 compiling BoomClock.c...
 linking...
-Program Size: data=36.5 xdata=0 code=4546
+Program Size: data=45.5 xdata=0 code=5468
 creating hex file from ".\Objects\BoomClock"...
 ".\Objects\BoomClock" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
