--- a/程序/lib/music/Objects/music.build_log.htm
+++ b/程序/lib/music/Objects/music.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Wild Wolf, N/A, LIC=EXTQ1-CY8IG-L0PNE-5BLIZ-IQF65-ZS0TT
+License Information: Wild Wolf, N\A, LIC=YAC6R-K2TR4-RK5BI-TI8LD-16VJT-VEQ3R
  
 Tool Versions:
 Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
@@ -19,16 +19,14 @@ CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
 C:\Users\wolfa\Desktop\BoomClock\³ÌÐò\lib\music\music.uvproj
-Project File Date:  10/09/2024
+Project File Date:  12/16/2024
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 assembling STARTUP.A51...
-compiling Delay.c...
 compiling main.c...
-compiling Timer0.c...
 linking...
-Program Size: data=85.0 xdata=0 code=481
+Program Size: data=11.0 xdata=0 code=452
 creating hex file from ".\Objects\music"...
 ".\Objects\music" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
